--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: 
   flutter_bloc: ^9.1.1
+  firebase_core: 
 
 dev_dependencies:
   flutter_test:
