--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   firebase_core: 
   firebase_auth: 
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
